[package]
name = "actlog"
version = "0.1.0"
edition = "2024"
authors = ["Morshedul Munna <morshedulmunna1@gmail.com>"]
description = "⚙️ A Rust-based CLI tool to inspect running processes, open ports, and kill misbehaving PIDs or ports from the terminal."
license = "MIT"
repository = "https://github.com/Execute-Soft/actlog"
readme = "README.md"
[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal colors and styling
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Optional: For configuration files
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

# New dependencies
sysinfo = "0.30"
psutil = "3.2"
netstat2 = "0.9"
csv = "1.3"
tui = "0.19"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"


[[bin]]
name = "actlog"
path = "src/main.rs"
