[package]
name = "actlog"
version = "0.1.0"
edition = "2021"
authors = ["Morshedul Munna <morshedulmunna1@gmail.com>"]
description = "☁️ A Rust-based CLI tool for cloud resource management, cost optimization, and automated scaling across AWS, GCP, and Azure."
license = "MIT"
repository = "https://github.com/Execute-Soft/actlog"
readme = "README.md"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal colors and styling
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for cloud APIs
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenv = "0.15"

# AWS SDK
aws-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-cloudwatch = "1.0"
aws-sdk-costexplorer = "1.0"
aws-sdk-autoscaling = "1.0"

# Google Cloud SDK (using REST APIs)
google-cloud-auth = "0.20"

# Azure SDK (using REST APIs)
azure_identity = "0.20"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
toml = "0.8"

# CSV handling for reports
csv = "1.3"

# Table formatting for reports
tabled = "0.15"

# Progress indicators
indicatif = "0.17"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Directory utilities
dirs = "5.0"
async-trait = "0.1.88"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "actlog"
path = "src/main.rs"
